--- a/Tool/css/style.css
+++ b/Tool/css/style.css
@@ -83,8 +83,8 @@ header{
 	width: 34px;
 	height: 34px;
 	float:left;
-    background-color: white;
-    margin-left: 3px;
-    margin-top: 2px;
-    border: 1px solid black;
+	background-color: rgb(255, 255, 255);
+	margin-left: 3px;
+	margin-top: 2px;
+	border: 1px solid black;
 }
